package com.workreserve.backend.room;

public enum RoomType {
    CONFERENCE_ROOM,
    PRIVATE_OFFICE,
    HOT_DESK,
    DEDICATED_DESK
}
