package com.workreserve.backend.user;

public enum Role {
    USER,
    ADMIN
}
